# Client-Server_SSH-alike

./: CMakeLists.txt  README.md
Client/: client.c  utilities.c  utilities.h
Network/: CMakeLists.txt  network.c  network.h
Queris/: queris_types.h  signals.h
Server/: server.c  utilities.c  utilities.h
